--- a/scripts/MEParallel.jl/Project.toml
+++ b/scripts/MEParallel.jl/Project.toml
@@ -10,6 +10,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 MineralExploration = "8a34a384-1fed-11ec-9621-0242ac130002"
 MixedFidelityModelSelection = "9d78a0d1-c017-464c-9942-b61bfbc69bdb"
 POMCPOW = "4c53ee00-974c-466f-8fa5-8dd73959bbab"
+POMDPPolicies = "182e52fb-cfd0-5e46-8c26-fd0667c990f4"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
